style.css
/* ----- */
/* Imports */
/* ----- */
@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&display=swap');


/* ----- */
/* Base */
/* ----- */

:root, [data-bs-theme=light] {
  --basefontsize: calc(1rem + 3vw);
  --baseborderthickness: calc(.5 * var(--basefontsize));
  --basefontcolour: #222;
  --green: #35A6AD;
  --red: #EF4748;
  --white: #F8F5ED;
  --grey: #ccc;
  --black: rgb(43, 40, 40);
}

body {
  font-family: "Eczar", "Times New Roman", "Georgia", serif;
  color: var(--basefontcolour);
  background-repeat: round;
  background-attachment: fixed;
  background-color: var(--white);
  overflow-x: hidden;
}

.container {
  margin: 0 auto;
  --margins: calc(2 * var(--basefontsize));
  margin-top: var(--margins);
  margin-bottom: var(--margins);
  display: flex;
  flex-direction: column;

}

/* ----- */
/* Sections */
/* ----- */

.container > * {
  max-width: calc(17.5 * var(--basefontsize));
  margin: 0 auto;
}

section {
  position: relative;
  text-align: left;
  flex-shrink: 0;
  flex-grow: 0;
  flex-basis: auto;
  padding: 1rem; 
  scroll-snap-align: start;
  width: -webkit-fill-available;
}
  
  .section-content { text-align: left; }
  .section-content {
    font-optical-sizing: auto;
    font-size: var(--basefontsize);
    font-weight: 440;
    line-height: calc(1.375 * var(--basefontsize));
  }
  /* replacing .text-contextnews with pseudo class */
  .section-content > span:nth-child(1) { color: var(--baseborderthickness); color: rgba(0, 0, 0, 0.5) }


/* ----- */
/* Story Dialogs */
/* ----- */

.dialog-wrapper {
  position: absolute;
  min-width: 300px;
  max-width: 450px;
  width: 100%;
  background: var(--white);
  box-shadow: 15px 15px 30px #00000054;
  padding: 1rem;
  font-size: 1.2rem;
}
  .dialog-wrapper .expand-collapse {
    display: block;
    width: 40px;
    height: 40px;
    background-color: grey;
    font-family: monospace;
    color: var(--white);
    position: absolute;
    left: -64px;
    top: -24px;
    text-align: center;
    font-size: 1.8rem;
    cursor: pointer !important;
    line-height: 1.5;
    font-weight: bolder;
  }
  .dialog-wrapper .year { font-size: 0.7rem; }
  .positive-story { border: var(--baseborderthickness) solid var(--green); }
  .negative-story { border: var(--baseborderthickness) solid var(--red); }
  .neutral-story  { border: var(--baseborderthickness) solid var(--grey); }
  .dialog-wrapper header {
    padding: 17px 30px;
    border-bottom: 1px solid #ccc;
  }
  .dialog-wrapper .content { padding: 2rem; }

.zoomin {
  transform: scale(1);
  z-index: 999;
  font-size: calc(1vw + 0.6vh + 1vmin);
  position: absolute !important;
  top: 30px;
  left: 30px;
}
.zoomout {
  transform: scale(.1);
  z-index: 10;
}
  .zoomout:hover { cursor: zoom-in !important; }


/* ----- */
/* Text highlights */
/* ----- */

a {
  text-decoration: none;
  display: inline-block;
}
a.p, a.n, a.e, a.m {
  border-radius: calc(.1 * var(--basefontsize));
  cursor: pointer;
}
a.p, a.n, a.e {
  padding: 0.5rem;
  cursor: zoom-in;
}

/* positive */
a.p { background-color: var(--green); }

/* negative */
a.n { background-color: var(--red); }

/* general world news */
a.e { background-color: var(--grey); }

/* "read more" */
a.m {  }



/* ----- */
/* Utility Classes */
/* ----- */
.disable-touch { touch-action: none !important; }
.invisible {
  visibility: hidden !important;
  display: none !important;
}

